# zecwallet-lite-lib

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  version.rs
lib/: Cargo.toml
lib/proto/: service.proto
lib/src/: commands.rs  compact_formats.rs  grpc_connector.rs  lib.rs  lightclient.rs  lightwallet.rs
lib/src/blaze/: block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_tx.rs  fetch_taddr_txns.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
lib/src/lightclient/: lightclient_config.rs  test_server.rs  tests.rs
lib/src/lightwallet/: data.rs  keys.rs  message.rs  utils.rs  wallet_txns.rs  walletokey.rs  wallettkey.rs  walletzkey.rs
lib/src/lightwallet/keys/: adapters.rs  in_memory.rs  ledger.rs  txbuilder.rs
lib/src/lightwallet/keys/in_memory/: builder.rs
